- banner - docker - version

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,6 +73,8 @@
             <li><a href="https://www.ivowoltring.org" target="_blank">About</a></li>
             <li><a href="http://ivo2u.nl/ZC" target="_blank">Buy me a Coffee</a></li>
         </ul>
+        <p>Contact:</p>
+        <p><a href="https://twitter.com/ivonet">Twitter</a></p>
     </div>
     <div class="column middle">
         <p>It is a freeware tool and therefore unsigned. You can read all about
