--- a/src/main/resources/static/m4baker.css
+++ b/src/main/resources/static/m4baker.css
@@ -13,6 +13,10 @@ body {
     font-size: 35px;
 }
 
+.shadow {
+  text-shadow: 2px 2px 5px orange;
+}
+
 .column {
     float: left;
     padding: 10px;
