--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
         </p>
         <p>
             <span class="w3-tag w3-large w3-padding w3-blue-gray" style="transform:rotate(-4deg)">
-                <a href="https://twitter.com/ivonet">Twitter</a>
+                <a href="https://twitter.com/ivonet" target="_blank">Twitter</a>
             </span>
         </p>
     </div>
