--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,6 +30,10 @@
                 <a href="https://twitter.com/ivonet" target="_blank">Twitter</a>
             </span>
         </p>
+        <p>
+            <strong>Note</strong> as of version 1.0.1 the build is specific for a Mac M1 (aarch64).
+            At this time I am not able to build multi-platform but would love the assistance
+        </p>
     </div>
     <div class="column middle">
         <p>It is a freeware / Donate ware.</p>
