improved on the description

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,6 +36,8 @@
         </p>
     </div>
     <div class="column middle">
+        <p>Relatively full fleched fee audiobook creation software</p>
+        <p>Bakes mp3 files to Audiobook (m4b) format.</p>
         <p>It is a freeware / Donate ware.</p>
         <p>You can read more about
             <a href="http://ivo2u.nl/ZO" target="_blank" class="shadow">Opening "Unidentified Developer" Apps On Your Mac</a>
